*Empty MediaWiki Message*

--- a/გრიგოლ_II_(ლორთქიფანიძე).mw
+++ b/გრიგოლ_II_(ლორთქიფანიძე).mw
@@ -1,8 +1,12 @@
-'''გრიგოლი''' (ერისკაცობაში გრიგოლ ბეჟანის ძე ლორთქიფანიძე), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1696]]-[[1742]] წლებში. გრიგოლმა აღადგინა საკათოლიკოსოს დაცემული მეურნეობა, დაიბრუნა ოდიშის, გურიის სამთავროებსა და რაჭის საერისთავოში ფეოდალებისაგან მიტაცებული ზოგიერთი საკათოლიკოსო მამული; საკათოლიკოსოს შემოსავლის გაზრდის მიზნით ადრე გაუქმებული ფულადი ბეგრის ნაცვლად შემოიღო სანთლის ბეგარა, ამითვე შეცვალა ნატურალური საკომლო ბეგრის ნაწილიც. მონაწილეობდა იმერეთის სამეფოს პოლიტიკურ ცხოვრებაში.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გრიგოლ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გრიგოლ]]
+|}</small>
+
+'''გრიგოლი''' (ერისკაცობაში ''გრიგოლ ბეჟანის ძე ლორთქიფანიძე''), დასავლეთ [[საქართველო|საქართველოს]] [[კათოლიკოს-პატრიარქი]] [[1696]]-[[1742]] წლებში. გრიგოლმა აღადგინა საკათოლიკოსოს დაცემული მეურნეობა, დაიბრუნა ოდიშის, გურიის სამთავროებსა და რაჭის საერისთავოში ფეოდალებისაგან მიტაცებული ზოგიერთი საკათოლიკოსო მამული; საკათოლიკოსოს შემოსავლის გაზრდის მიზნით ადრე გაუქმებული ფულადი ბეგრის ნაცვლად შემოიღო სანთლის ბეგარა, ამითვე შეცვალა ნატურალური საკომლო ბეგრის ნაწილიც. მონაწილეობდა [[იმერეთის სამეფო|იმერეთის სამეფოს]] პოლიტიკურ ცხოვრებაში.
 
 
 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
