*Empty MediaWiki Message*

--- a/პაატა_გუგუშვილი.mw
+++ b/პაატა_გუგუშვილი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გუგუშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გუგუშვილი]]
+|}</small>
+
 <div style="float:right">[[Image:Paata_gugushvili.jpg]]</div>
 
 ==ბიოგრაფია==
