--- a/გუგუშვილი.mw
+++ b/გუგუშვილი.mw
@@ -1,6 +1,6 @@
 საკუთარი სახელი ''' გუგუშვილი''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
-
+* [[გუგუშვილი, ბესარიონ]] - 
 * [[გუგუშვილი, ეთერ]] - თეატრმცოდნე
 * [[გუგუშვილი, პაატა]] - ეკონომისტი
 
