*Empty MediaWiki Message*

--- a/ლადო_გუდიაშვილი.mw
+++ b/ლადო_გუდიაშვილი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გუდიაშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გუდიაშვილი]]
+|}</small>
 [[სურათი:Post-59-1120802467.jpg|thumb|right|[[ახვლედიანი, ელენე | ელენე ახვლედიანი]] და ლადო გუდიაშვილი, პარიზი, 1925]]
 '''ლადო გუდიაშვილი''' (* [[18 მარტი]], [[30 მარტი]], [[1896]], [[თბილისი]] ―      †   [[20 ივლისი]], [[1980]], [[თბილისი]]) - მე-20 საუკუნის გამოჩენილი [[ ქართველები | ქართველი]] ფერმწერი, გრაფიკოსი, თეატრისა და კინოს მხატვარი. 
 
