*Empty MediaWiki Message*

--- a/გურანდუხტი.mw
+++ b/გურანდუხტი.mw
@@ -1,8 +1,9 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი ''' გურანდუხტი ''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
 * [[გურანდუხტი (X ს.)]] - პოლიტიკური მოღვაწე
 * [[გურანდუხტი (XI ს.)]]  - საქართველოს მეფის გიორგი I-ის ასული
-* [[გურანდუხტი, დავით IV მეუღლე ]] - ყივჩაყთა მთავრის ათრაქა შარაღანის ძის ასული
+* [[გურანდუხტი (დავით IV-ის მეუღლე) ]] - ყივჩაყთა მთავრის ათრაქა შარაღანის ძის ასული
+
+
+{{მრავალმნიშვნელოვანი}}
