--- a/გურანდუხტი_(X_საუკუნე).mw
+++ b/გურანდუხტი_(X_საუკუნე).mw
@@ -1,5 +1,11 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გურანდუხტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გურანდუხტი]]
+|}</small>
+
 '''გურანდუხტი''', X საუკუნის I ნახევრის პოლიტიკური მოღვაწე [[გიორგი II]] აფხაზთა მეფის ([[922]]-[[957]]) ასული, [[გურგენი | გურგენ]] მეფეთა მეფის ([[994]]-[[1008]]) მეუღლე, [[ბაგრატ III | ბაგრატ III-ის]] ([[975]]-[[1014]]) დედა. [[975]] [[საქართველო | საქართველოს]] გაერთიანების მოწინააღმდეგე დიდებული აზნაურები დაუკავშირდნენ კახეთის სამეფოს, გურანდუხტი ქმარშვილიანად შეიპყრეს და კახეთში წაიყვანეს. ამის საპასუხოდ ბაგრატ III-ის მამობილი [[დავით III]] დიდი კურაპალატი ქართლში შეიჭრა, კახეთის ლაშქარი განდევნა და გურანდუხტი და სხვა ტყვეები გაათავისუფლა. 70-იანი წლების ბოლოსა და 80 წლრბის დასაწყისში, ბაგრატ III-ის დასავლეთ საქართველოში ყოფნის დროს, გურანდუხტი განაგებდა ქართლს, რომლის პოლიტიკური ცენტრი [[უფლისციხე]] იყო.
 
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი პოლიტიკური მოღვაწეები]]
