--- a/გურანდუხტი_(XI_საუკუნე).mw
+++ b/გურანდუხტი_(XI_საუკუნე).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გურანდუხტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გურანდუხტი]]
+|}</small>
 '''გურანდუხტი''', [[საქართველო | საქართველოს]] მეფის [[გიორგი I, ბაგრატ III-ის ძე | გიორგი I-ის]] (1014-27) ასული, [[ბაგრატ IV | ბაგრატ IV-ის]] (1027-72) და. მონაწილეობდა ქვეყნის პოლიტიკურ ცხოვრებაში. იყო [[გიორგი II, საქართველოს მეფე | გიორგი II-ის]] (1072-89) აღმზრდელი.
 
 
