*Empty MediaWiki Message*

--- a/გურანდუხტი_(დავით_IV-ის_მეუღლე).mw
+++ b/გურანდუხტი_(დავით_IV-ის_მეუღლე).mw
@@ -1,1 +1,5 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გურანდუხტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გურანდუხტი]]
+|}</small>
 '''გურანდუხტი''', [[დავით IV|დავით IV აღმაშენებლის]] მეუღლე, [[ყივჩაყები|ყივჩაყთა]] მთავრის [[ათრაქა შარაღანის ძე|ათრაქა შარაღანის ძის]] ასული. დავით აღმაშენებლის მოყვრობამ ათრაქა შარაღანი ძესთან ხელი შეუწყო ყივჩაყებთან ურთიერთობის გაუმჯობესებას და გარკვეული როლი შეასრულა [[საქართველო|საქართველოში]] მათ ჩამოსახლებაში.
