--- a/გურგენი_(მრავალმნიშვნელოვანი).mw
+++ b/გურგენი_(მრავალმნიშვნელოვანი).mw
@@ -1,9 +1,10 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი ''' გურგენ ''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
 * [[გურგენ I ]] - ბაგრატიონთა კლარჯეთის შტოს წარმომადგენელი
 * [[გურგენ IV]] - ბაგრატიონთა კლარჯეთის შტოს წარმომადგენელი
-* [[გურგენი, VI ს.]] - ქართლის მეფე
+* [[გურგენი (VI ს.)]] - ქართლის მეფე
 * [[გურგენი]] - ბაგრატიონთა ტაოს შტოს წარმომადგენელი
+
+
+{{მრავალმნიშვნელოვანი}}
