*Empty MediaWiki Message*

--- a/გურგენ_I.mw
+++ b/გურგენ_I.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გურგენ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გურგენ]]
+|}</small>
+
 '''გურგენ I''' († [[891]]), [[ბაგრატიონები|ბაგრატიონთა]]  [[კლარჯეთი|კლარჯეთის]] შტოს წარმომადგენელი, [[ადარნასე I|ადარნასე I-ის ძე]], [[ერისთავთერისთავი]], [[კურაპალატი]] [[881]]-[[891]]. 
 
 ფლობფა ამიერტაოს ნაწილს და კალმახს. დაახლოებით [[881]]-მდე გურგენ I თავის ბიძაშვილ [[ნასრა]] გვარამის ძესთან ერთად აფხაზთა მეფეებს ეხმარებოდა ქართლისათვის ბრძოლაში და უპირისპირდებოდა [[დავით I კურაპალატი|დავით I კურაპალატსა]] და [[ლიპარიტ I]] კლდეკარის ერისთავს, რომლებიც [[სომხები|სომხებს]] ემხრობოდნენ. ნასრას მიერ დავით I კურაპალატის მოკვლის ([[881]]) შემდეგ, მისი მემკვიდრის ადარნასეს მცირეწლოვანების გამო სახლიკაცებმა გურგენ I დასვეს კურაპალატად.
@@ -7,4 +12,5 @@
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ბაგრატიონთა კლარჯეთის შტოს წარმომადგენელი]]
 [[კატეგორია:გარდაცვლილი 891]]
