*Empty MediaWiki Message*

--- a/გურგენ_IV.mw
+++ b/გურგენ_IV.mw
@@ -1,6 +1,12 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გურგენ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გურგენ]]
+|}</small>
+
 '''გურგენ IV''' (†  [[14 თებერვალი]], [[941]]), [[ბაგრატოინები|ბაგრატიონთა]][[ კლარჯეთია|კლარჯეთის]] შტოს წარმომადგენელი, [[ადარნასე II|ადარნასე II-ის ძე]], [[ერისთავთერისთავი]] [[918]]-[[941]]. ერისთავთერისთავობა მიიღო მისი ბიძის [[აშოტ კუხი|აშოტ კუხის]] (ადარნასე II-ის ძმა) გარდაცვალების შემდეგ. წყაროები მას მოიხსენიებენ როფორც დიდ ერისთავთერისთავს. გურგენ IV-მ დაასრულა [[ხანძთა|ხანძთის]] ახალი ეკლესიის მშენებლობა.
 
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ბაგრატიონთა კლარჯეთის შტოს წარმომადგენელები]]
 [[კატეგორია:გარდაცვლილი 941]]
