*Empty MediaWiki Message*

--- a/გურგენ_I.mw
+++ b/გურგენ_I.mw
@@ -12,5 +12,5 @@
 
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:ბაგრატიონთა კლარჯეთის შტოს წარმომადგენელი]]
+[[კატეგორია:ბაგრატიონთა კლარჯეთის შტოს წარმომადგენლები]]
 [[კატეგორია:გარდაცვლილი 891]]
