*Empty MediaWiki Message*

--- a/გურგენ_IV.mw
+++ b/გურგენ_IV.mw
@@ -8,5 +8,5 @@
 
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:ბაგრატიონთა კლარჯეთის შტოს წარმომადგენელები]]
+[[კატეგორია:ბაგრატიონთა კლარჯეთის შტოს წარმომადგენლები]]
 [[კატეგორია:გარდაცვლილი 941]]
