*Empty MediaWiki Message*

--- a/გურგენი_(ქართლის_მეფე).mw
+++ b/გურგენი_(ქართლის_მეფე).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გურგენ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გურგენ]]
+|}</small>
+
 '''გურგენი''', ქართლის მეფე VI საუკუნის 20-იან წლებში. მოხსენიებული ჰყავს VI საუკუნის ბიზანტიელ ისტორიკოსს [[პროკოპი კესარიელი|პროკოპი კესარიელს]]. ქართულ ისტორიულ წყაროებში არ იხსენიება. [[523]] გურგენი მეთაურობდა [[გურგენის აჯანყება 523|ქართლის აჯანყებას]] ირანის წინააღმდეგ. აჯანყების დამარცხების შემდეგ მან თავისი ოჯახითა და მომხრე აზნაურებით ბიზანტიას შეაფარა თავი. პროკოპი კესარიელის ცნობით, იმავე [[523]] წელს ირანელებმა ქართლში მეფობა გააუქმეს, მაგრამ სხვა ბიზანტიის წყაროებით ირკვევა, რომ გურგენი არ ყოფილა ქართლის უკანასკნელი მეფე და ერტხანს მის შემდეგაც გრძელდებოდა მეფობა.
 
 
