*Empty MediaWiki Message*

--- a/მცხეთა-მთიანეთის_მხარე.mw
+++ b/მცხეთა-მთიანეთის_მხარე.mw
@@ -72,8 +72,8 @@
 *[[ანანურის მონასტერი]]
 *[[ზედაზნის მონასტერი]]
 *[[ლარგვისის სამონასტრო კომპლექსი]]
-*[[შიომღვიმის მონასტერი]]
-*სოფელი [[შატილი]]
+*[[შიომღვიმე|შიომღვიმის მონასტერი]]
+*[[შატილი (ძეგლი)]]
 *[[გერგეტის სამება]]
 
 ==ისტორია==
