--- a/დავითგარეჯა.mw
+++ b/დავითგარეჯა.mw
@@ -7,10 +7,7 @@
 დავითის ლავრა გარეჯის სამონასტრო ცხოვრების ცენტრი იყო. დროთა ვითარებაში მას განშტოებები შეემატა. გარკვეულ პერიოდში მონასტერთა რიცხვმა თორმეტსაც მიაღწია. ამ ხანიდან უნდა იყოს შემორჩენილი სახელწოდება "გარეჯის ათორმეტნი მონასტერნი" შემდეგში თანდათან ჩამოყალიბდა შორი-შორს მდებარე გამოქვაბულ მონასტერთა კომპლექსების ქსელი: წამებული, ნათლისმცემელი, ჩიჩხიტური, თერთრსენაკები, დოდოს რქა, უდაბნო, აღდგომისა წამებული, ბერთუბანი, მღვიმე, ქოლაგირი, დიდი ქვაბები, ვერანგარეჯა, პირუკუღმარი, პატარა ქვაბები. დავითგარეჯის მონასტერთა საქმიანობა თვალსაჩინო და მნიშვნელოვანი ფაქტორი გახდა ქართველი ხალხის როგორც რელიგიურ, ისე საერთოდ კულტურულ ცხოვრებაში. XII საუკუნის დასაწყისში [[დავით IV|დავით IV აღმაშენებელმა]] დავითგარეჯის მონასტრები სამეფო საკუთრებად აქცია,ხელს უწყობდა მათ დაწინაურებას. მონასტრები გათავისუფლებული იყო სახელმწიფო გადასახადებისაგან. [[1265]] მონღოლთა ლაშქარმა [[ბერქა|ბერქა-ყაენის]] სარდლობით დაარბია და მოაოხრა დავითგარეჯა და მისი მიდამოები.
 [[სურათი:Davit-Gareji-small.JPG|250px|left]]
 XIV საუკუნის I ნახევარში, [[გიორგი V ბრწყინვალე|გიორგი V ბრწყინვალის]] მეფობაში, დავითგარეჯა მძლავრ პოლიტიკურ და ეკონომიკურ ცენტრად იქცა. მონასტერთა მესვეურნი მონაწილეობდნენ სამეფო დარბაზის მუშაობაში და ქვეყნის საეკლესიო საქმეთა მართვაში. XIV საუკუნის ბოლოს [[თემურლენგი|თემურლენგის]] მრავალგზის ლაშქრობების დროს, სამონასტრო ცხოვრება მოიშალა. [[1424]] [[ალექსანდრე I, დიდი|ალექსანდრე I-მა დიდმა]] დავითგარეჯა მცხეთის სვეტიცხოვლის საპატრიარქო ეკლესიას შესწირა. [[1616]]-[[1617]] სპარსელთა ლაშქარმა დაარბია, მონასტრები გაუქმდა. [[1639]] [[თეიმურაზ I|თეიმურაზ I-მა]] აღადგინა აქ სამონასტრო ცხოვრება XVIII საუკუნეში დავითგარეჯა კვლავ მეფის ხელდებული გახდა. მას ეკუთვნოდა ვრცელი მამულები და სოფლები, იქ მოსახლე გლეხები სამონასტრო ყმებად ითვლებოდნენ. დავითგარეჯის მონასტრებმა XIX  საუკუნის დასასრულამდე იარსება.
-<gallery>
-სურათი:Geo92-153-2400jpg.jpg|
-სურათი:Geo92-142-2400.jpg|
-</gallery>
+
 დავითგარეჯის სამონასტრო მშენებლობამ თავის მწვერვალს საქართველოს საერთო ეროვნულ და კულტურულ-პოლიტიკური აღმავლობის დროს, XII-XIII საუკუნეების მიჯნაზე მიაღწია. დავითგარეჯში გამომუშავდა სამონასტრო ცხოვრებისა და მშენებლობის საკუთარი წესი, ფრესკული მხატვრობის საკუთარი სკოლა.
 [[სურათი:Gareji 03.jpg|thumb|დავითგარეჯის მხატვრობა]]
 ამ პერიოდის დავითგარეჯის მონასტრების სახე მკვეთრად განსხვავდება ადრინდელი პერიოდის მონასტრებისაგან. მთავარ ეკლესიებსა და [[სატრაპეზო|სატრაპეზოებში]] ადრინდელი უბრალოებისა და უშუალობის ნაცვლად თავი იჩინა დიდებულებამ, გრანდიოზულობამ, ინტერესმა ფართო, თავისუფალი სივრცისადმი. შთაბეჭდილებას კიდევ უფრო აძლიერებდა მთავარი ეკლესიებისა და საერთო სატრაპეზოების კედლების მოხატულობა. დავითგარეჯის მხატვრობას განსაკუთრებულ მნიშვნელობას ანიჭებს [[ქტიტორი|ქტიტორთა]] მრავალრიცხოვანი გამოსახულებები, მ.შ. საქართველოს მეფეთა პორტრეტები ([[თამარი|თამარ მეფე]] და მისი ძე [[გიორგი IV ლაშა]] - [[ბერთუბნის მონასტერი|ბერთუბნის ეკლესია]], ამჟამად - [[ხელოვნების სახელმწიფო მუზეუმი]], [[თბილისი]]; მეფე [[დემეტრე II, თავდადებული|დემეტრე II თავდადებული]] - [[უდაბნო|უდაბნოს მონასტრის]] ხარების ეკლესიის მოხატულობა). ქტიტორთა პორტრეტები ზომით ბევრად ჭარბობს რელიგიური პერსონაჟების გამოსახულებებს, რაც მოწმობს ქართველი ოსტატის დამოუკიდებლობად ბიზანტიური ხელოვნების მიერ დაკანონებული სქემებისაგან. აღსანიშნავია ბერთუბნის სატრაპეზოს მოხატულობა, რომელიც საზეიმო და დიდებულ შთაბეჭდილებას ტოვებს. უდაბნოს მთავარ ეკლესიაში გამოსახულია სცენები [[დავით გარეჯელი|დავით გარეჯელის]] ცხოვრებიდან ასევე  საინტერესოა უდაბნოს მონასტრის ამაღლების ეკლესიის [[აფსიდა|აფსიდის]] მოხატულობაც, რომელიც გამოირჩევა მეტყველი სახეებით და დინამიკურობით.
@@ -19,6 +16,11 @@ XIV საუკუნის I ნახევარში, [[გიორგი
 
 დავითგარეჯა კულტურისა და განათლების მძლავრი კერა იყო. სხვადასხვა დროს დავითგარეჯის მონასტრებში მოღვაწეობდნენ ონოფრე გარეჯელი (XII ს.), დემეტრე I, [[ონოფრე|ონოფრე მაჭუტაძე]] (XVII-XVIII საუკუნეების მიჯნა), [[ორბელიანი, სულხან-საბა|სულხან-საბა ორბელიანი]], [[ბარათაშვილ-ორბელიშვილი, ბესარიონ|ბესარიონ ბარათაშვილ-ორბელიშვილი]], ნიკოლოზ ჩერქეზიშვილი (XVIII ს), [[საგინაშვილი, გაბრიელ|გაბრიელ საგინაშვილი]] (XVIII ს), [[გრიგოლ დოდორქელი]], [[ანტონ I]], [[გაბაშვილი, ტიმოთე| ტიმოთე გაბაშვილი]], [[გაბრიელ მცირე]] და სხვა. გარეჯელი მოღვაწეები ეწეოდნენ ხელნაწერებს, ადგენდნენ კრებულებს, დახმარებას უწევდნენ კულტურის სხვა კერებს. დავითგარეჯში დაცული იყო ხელნაწერთა მდიდარი ფონდი.
 
+==გალერეა==
+<gallery>
+სურათი:Geo92-153-2400jpg.jpg|
+სურათი:Geo92-142-2400.jpg|
+</gallery>
 
 [[კატეგორია:საქართველოს  ხუროთმოძღვრების ძეგლები]]
 [[en:Davidgareja]]
