minnan: -> zh-min-nan:

--- a/ჩინური_ენა.mw
+++ b/ჩინური_ენა.mw
@@ -61,6 +61,7 @@
 [[კატეგორია:მსოფლიოს ენები]]
 [[კატეგორია:ჩინურ-ტიბეტური ენები]]
 [[ar:صينية]]
+[[zh-min-nan:Hàn-gí]]
 [[cs:%C4%8C%C3%ADn%C5%A1tina]]
 [[da:kinesisk]]
 [[de:Chinesische Sprache]]
@@ -73,7 +74,6 @@
 [[ja:中国語]]
 [[ko:중국어]]
 [[li:Sjinees]]
-[[minnan:Hàn-gí]]
 [[nl:Chinees]]
 [[nn:Kinesisk_språk]]
 [[no:Kinesisk språk]]
