--- a/მცხეთის_ჯვრის_მონასტერი.mw
+++ b/მცხეთის_ჯვრის_მონასტერი.mw
@@ -8,10 +8,10 @@
 წლების განმავლობაში ჯვრის კომპლექსისთვის ბევრი ზიანი იქნა მიყენებული, ბუნებით თუ ადამიანის ხელით და ამჟამად ის მსოფლიოს 100 განადგურების პირას მისულ უმთავრეს კულტურულ ძეგლთა შორისაა.
 
 ==რესურსები ინტერნეტში==
-*[http://wmf.org/html/programs/resources/sitepages/georgia_jvari_monastery.html
+*[http://wmf.org/html/programs/resources/sitepages/georgia_jvari_monastery.html ჯვრის მონასტერი დაცვას საჭიროებს]
 
 
-[[კატეგორია:ქართული ხურომთმოძღვრების ძეგლები]]
+[[კატეგორია:ქართული ხუროთმოძღვრების ძეგლები]]
 [[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
 [[en:Jvari (monastery)]]
