*Empty MediaWiki Message*

--- a/მესხეთი.mw
+++ b/მესხეთი.mw
@@ -9,7 +9,7 @@
 
 *“''მესხეთი არის აკვანი საქართველოს დიდებისა...''” – [[ჯანაშვილი, მოსე|მოსე ჯანაშვილი]].
 *“''იქ გაფანტული კულტურის ნაშთები სულია ჩვენი ერისა''” – [[ვაჟა-ფშაველა]].
-*“''აქ ოდითგანვე ჟღერდა სიტყვა ქართული რუსთაველისა ...''” – [[ვახუშტი ბაგრატიონი]].
+*“''აქ ოდითგანვე ჟღერდა სიტყვა ქართული რუსთაველისა ...''” – [[ვახუშტი ბატონიშვილი|ვახუშტი ბაგრატიონი]].
 *“''მესხეთი ქართველებისთვის ის არის სწავლა-განათლების საქმეში, რაც საბერძნეთი კაცობრიობისათვის''” - [[ჯანაშვილი, მოსე|მოსე ჯანაშვილი]].
 
 
