*Empty MediaWiki Message*

--- a/გელათის_მონასტერი.mw
+++ b/გელათის_მონასტერი.mw
@@ -1,11 +1,15 @@
 [[სურათი:Gelati-1.jpg|thumb|გელათის მონასტერი]]
-'''გელათის მონასტერი''', ქართული ხუროთმოძღვრული ანსამბლი. შუა საუკუნეების საქართველოს უმნიშვნელოვანესი ცენტრი. 
+'''გელათის მონასტერი''' -- ქართული ხუროთმოძღვრული ანსამბლი, შუა საუკუნეების საქართველოს უმნიშვნელოვანესი ცენტრი. აგებულია [[ქუთაისი|ქ. ქუთაისის]] ჩრდილოეთ-აღმოსავლეთით 11 კმ-ზე, [[წყალწითელა (მდინარე)|მდინარე წყალწითელის]] ხეობაში. დაარსებულია [[1106]] წელს [[დავით აღმაშენებელი|დავით აღმაშენებლის]] თაოსნობით. შემოზღუდულია გალავნით. ანსამბლში შედის სხვადასხვა  დროინდელი (ძირითადად XII-XIII სს.) შენობები. შეტანილია [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის ძეგლების სიაში.
 
-აგებულია [[ქუთაისი|ქ. ქუთაისის]] ჩრდილოეთ-აღმოსავლეთით 11 კმ-ზე, [[წყალწითელა (მდინარე)|მდინარე წყალწითელის]] ხეობაში. დაარსებულია [[1106]] [[დავით აღმაშენებელი|დავით აღმაშენებლის]] თაოსნობით. შემოზღუდულია გალავნით. ანსამბლში შედის სხვადასხვა  დროინდელი (ძირითადად XII-XIII სს.) შენობები. 
-
+==არქიტექტურა==
 ღვთისმშობლის მიძინების სახელობის ცენტრალურ-გუმბათოვან მთავარ ტაძარს ორ ბოძსა და საკურთხეველის კედლებზე დაყრდნობილი გუმბათი აქვს, აღმოსავლეთ მხარეს კი - სამი წახნაგოვანი შვერილი აფსილი. ეკლესიისათვის სხვადასხვა დროს მიუშენებიათ: დასავლეთ მხარეს - სტოა, სამხრეთიდან და ჩრდილოეთიდან კი ეკვდერები. ტაძრის ფართობი მინაშენების ჩათვლით დაახლოებით 35 მ x 36 მ სიმაღლე 34 მ-მდე. გარედან ტაძარი მოპირკეთებულია ეკლარის თლილი ქვით, ფასადები დამუშავებულია რთული რიტმის დეკორატიული თაღედებით და თითქმის სრულიად მოკლებულია ჩუქურთმებს. ფართო და უხვად განათებული შიგა სივრცე საზეიმო შთაბეჭდილებას ტოვებს. კედელ-კამარები ერთიანად დაფარულია სხვადასხვა დროის მხატვრობით. 
 
-მთავარი ტაძრის კონქში დაცულია ცნობილი [[გელათის მოზაიკა]], დასავლეთ სტოაში - XII საუკუნის ფრესკები, რომლებზეც ფამოსახულია საეკლესიო კრება, ხოლო სამხრეთ ეკვდერში - დავით ნარინის ორი, XIII საუკუნეში შესრულებული პორტრეტი. მოხატულობა არაერთხელ განუახლებიათ. განსაკუთრებით საყურადღებოა ისტორიულ პირთა პორტრეტები (XVI ს.): ჩრდილოეთ კედელზე გამოსახული არიან იმერეთის სამეფო ოჯახის წევრები. აქვეა[[ დავით აღმაშენებელი|დავით აღმაშენებლის]] ფრესკული გამოსახულება, რომელიც, როგორც ჩანს, ადრინდელ მხატვრობას მიეკუთვნება, მაგრამ XVI საუკუნეში აღუდგენიათ ძველი ნახატის მიხედვით. მთავარი ტაძრის აღმოსავლეთით, XII საუკუნის წმ. გიორგის სახელობის ეკლესიაა. გეგმითა და ფორმებით იგი მთავარ ტაძარს იმეორებს, მაგრამ უფრო მცირე ზომისაა. შიგნიდან კედლები დაფარულია XVI საუკუნის მოხატულობით. მთავარი ტაძრიდან 9 მ-ზე აღმართულია XIII-XIV საუკუნეების წმ. ნიკოლოზის სახელობის ორსართულიანი ეკლესია. გეგმით სწორკუთხა ქვედა სართული ოთხივე მხარეს თაღებითაა გახსნილი, ხოლო მეორე სართული ჯვარისებრი მოხაზულობის პატარა ეკლესიაა. მთავარი ტაძრის ჩრდილოეთ-დასავლეთით XIII საუკუნის სამრეკლოა, რომლის ქვედა ნაწილი - თაღებით გახსნილი ქვის ფანჩატური - წყაროზეა დაშენებული. მის თავზე პატარა სათავსია, ხოლო სულ ზემოთ - სამრეკლო. 
+მთავარი ტაძრის აღმოსავლეთით, XII საუკუნის წმ. გიორგის სახელობის ეკლესიაა. გეგმითა და ფორმებით იგი მთავარ ტაძარს იმეორებს, მაგრამ უფრო მცირე ზომისაა. შიგნიდან კედლები დაფარულია XVI საუკუნის მოხატულობით. მთავარი ტაძრიდან 9 მ-ზე აღმართულია XIII-XIV საუკუნეების წმ. ნიკოლოზის სახელობის ორსართულიანი ეკლესია. გეგმით სწორკუთხა ქვედა სართული ოთხივე მხარეს თაღებითაა გახსნილი, ხოლო მეორე სართული ჯვარისებრი მოხაზულობის პატარა ეკლესიაა. მთავარი ტაძრის ჩრდილოეთ-დასავლეთით XIII საუკუნის სამრეკლოა, რომლის ქვედა ნაწილი - თაღებით გახსნილი ქვის ფანჩატური - წყაროზეა დაშენებული. მის თავზე პატარა სათავსია, ხოლო სულ ზემოთ - სამრეკლო. 
+
+გელათის ანსამბლში შედის აგრეთვე [[გელათის აკადემია|აკადემია]], რომელმაც ჩვენამდე ნანგრევების სახით მოაღწია. გეგმით სწორკუთხა შენობას (ფართობი დაახლოებით 300 მ²) აღმოსავლეთით სამი შესასვლელი ჰქონია. მოგვიანებით შუა შესასლელისათვის მდიდრულად მორთული კარიბჭე მიუშენებიათ. კედლების გასწვრივ ქვის დასაჯდომები იყო გაყოლებული. შენობას დიდი სარკმლები ანათებდა, კედლები მოხატული ჰქონდა. 
+
+==მოხატულობა==
+მთავარი ტაძრის კონქში დაცულია ცნობილი [[გელათის მოზაიკა]], დასავლეთ სტოაში - XII საუკუნის ფრესკები, რომლებზეც გამოსახულია საეკლესიო კრება, ხოლო სამხრეთ ეკვდერში - დავით ნარინის ორი, XIII საუკუნეში შესრულებული პორტრეტი. მოხატულობა არაერთხელ განუახლებიათ. განსაკუთრებით საყურადღებოა ისტორიულ პირთა პორტრეტები (XVI ს.): ჩრდილოეთ კედელზე გამოსახული არიან იმერეთის სამეფო ოჯახის წევრები. აქვეა [[დავით აღმაშენებელი|დავით აღმაშენებლის]] ფრესკული გამოსახულება, რომელიც, როგორც ჩანს, ადრინდელ მხატვრობას მიეკუთვნება, მაგრამ XVI საუკუნეში აღუდგენიათ ძველი ნახატის მიხედვით. 
 
 <gallery>
 სურათი:Gelati Theotokos.jpg|
@@ -15,12 +19,12 @@
 სურათი:Gelati murals.jpg|
 </gallery>
 
-გელათის ანსამბლში შედის აგრეთვე [[გელათის აკადემია|აკადემია]], რომელმაც ჩვენამდე ნანგრევების სახით მოაღწია. გეგმით სწორკუთხა შენობას (ფართობი დაახლოებით 300 მ²) აღმოსავლეთით სამი შესასვლელი ჰქონია. მოგვიანებით შუა შესასლელისათვის მდიდრულად მორთული კარიბჭე მიუშენებიათ. კედლების გასწვრივ ქვის დასაჯდომები იყო გაყოლებული. შენობას დიდი სარკმლები ანათებდა, კედლები მოხატული ჰქონდა. 
-
-გელათის მონასტრის გალავნის სამხრეთით, მთავარ შესასვლელში, [[დავით აღმაშენებელი|დავით აღმაშენებლის]] საფლავია. გელათის მონასტერი სამეფო სახლის საკუთრება და საძვალე იყო, ტერიტორიულად ახლოს მდებარეობდა სამეფოს პოლიტიკურ ცენტრთან - ქუთაისთან, აქ არის დასაფლავებული სრულიად საქართველოს თითქმის ყველა მფე: [[დავით IV|დავით IV აღმაშენებელი]], [[დემეტრე I]], [[გიორგი III, საქართველოს მეფე|გიორგი III]], [[თამარი]] (თამარის ისტორიკოსების ცნობით) და სხვა. იმერეთის მეფეები: [[ბაგრატ III, ალექსანდრე II-ის ძე|ბაგრატ III]], [[გიორგი II, იმერეთის მეფე|გიორგი II]], [[გიორგი III, კონსტანტინე მეფის ძე|გიორგი III]], [[გიორგი VI, იმერეთის მეფე|გიორგი VI]], [[ალექსანდრე V]], [[სოლომონ I]] და სხვა.
+==კომპლექსი==
+გელათის მონასტრის გალავნის სამხრეთით, მთავარ შესასვლელში, [[დავით აღმაშენებელი|დავით აღმაშენებლის]] საფლავია. გელათის მონასტერი სამეფო სახლის საკუთრება და საძვალე იყო, ტერიტორიულად ახლოს მდებარეობდა სამეფოს პოლიტიკურ ცენტრთან - ქუთაისთან, აქ არის დასაფლავებული სრულიად საქართველოს თითქმის ყველა მეფე: [[დავით IV|დავით IV აღმაშენებელი]], [[დემეტრე I]], [[გიორგი III, საქართველოს მეფე|გიორგი III]], [[თამარი]] (თამარის ისტორიკოსების ცნობით) და სხვა. იმერეთის მეფეები: [[ბაგრატ III, ალექსანდრე II-ის ძე|ბაგრატ III]], [[გიორგი II, იმერეთის მეფე|გიორგი II]], [[გიორგი III, კონსტანტინე მეფის ძე|გიორგი III]], [[გიორგი VI, იმერეთის მეფე|გიორგი VI]], [[ალექსანდრე V]], [[სოლომონ I]] და სხვა.
 
 გელათის მონასტერი ერთ-ერთი მდიდარი ფეოდალური [[სენიორია]] იყო. მის მფლობელობაში ითვლებიდა ვრცელი მიწა-წყალი. მეურნეობაში წამყვანი დარგი იყო მიწათმოქმედება, განვითარებული მევენახეობა, ღვინის, თაფლისა და სანთლის სასაქონლო-საბაზრო წარმოება მონასტერს დიდ ფულად შემოსავალს აძლევდა.
 
+==ისტორია==
 XII-XV საუკუნეებში გელათის მონასტერს მინიჭებული ჰქონდა სრული ავტონომია, აღიარებდა მხოლოდ მეფის უმაღლეს უფლებას. საქართველოს [[კათოლიკოს-პატრიარქი|კათოლიკოს-პატრიარქსაც]] კი არ ჰქონდა არავითარი სახელისუფლო ძალა (გარდა მღვდლების კურთხევისა). გელათის მონასტერში მეფეს ჰყავდა თავისი პირადი წარმომადგენელი.მონასტრის უფროსი მონაზვნები და მოძღვართმოძღვარი სამეფო დარბაზის წევრებად ითვლებოდნენ. XIII საუკუნის II ნახევარსა - XV საუკუნეში ქვეყნის პოლიტიკური-ეკონომიური დაკნინების გამო (მონღოლების, [[თემურლენგი|თემურლენგის]] შემოსევები, გამწვავებული შინაფეოდალური საადგილმამულო ბრძოლები) გელათის მონასტრის ეკონომიური და კულტურული ცხოვრება შეფერხდა. მისი ძველი მდგომარეობა ნაწილობრივ აღადგინა [[გიორგი V ბრწყინვალე|გიორგი ბრწყინვალემ]].
 
 საქართველოს პოლიტიკური დაშლის (XV საუკუნის II ნახევარი) შემდეგ გელათის მონასტერი დასავლეთ საქართველოს მეფეების ხელში გადავიდა. [[1510]] წლის 23 ნოემბერს იგი გადაწვა იმერეთში შემოჭრილმა ოსმალთა ჯარმა. იმერეთის მეფეებმა [[ბაგრატ III, ალექსანდრე II-ის ძე|ბაგრატ III-მ]] და [[გიორგი II, იმერეთის მეფე|გიორგი II-მ]] გელათის მონასტერში დიდი მასშტაბის სამეურნეო და საამშენებლო სამუშაოები ჩაატარეს - კაპიტალურად შეაკეთეს და მოხატეს ტაძრები, განაახლეს გაუქმებული და მიტოვებული ეკლესია-ეკვდერები, შესწირეს მონასტერს ახალი მამულები. ბაგრატ III-ს თანამედროვენი გელათის "მეორედ აღმშენებელს" უწოდებდნენ. მას მხარში ედგნენ გელათის ეპისკოპოსი [[მელქისედეკი|მელქისედეკ საყვარელიძე]] და დასავლეთ საქართველოს კათოლიკოს-პატრიარქი [[ევდემონ I|ევდემონ ჩხეტიძე]]. XVI საუკუნის 20-იან წლებში ბაგრატ III-მ გელათის მონასტერში [[გელათის საეპისკოპოსო|საეპისკოპოსო]] კათედრა დააარსა, რამაც გარკვეულად აამაღლა მონასტრის პოლიტიკური-მორალური და ეკონომიური მდგომარეობა. XVI საუკუნის II ნახევარში დასავლეთ საქართველოს კათოლიკოს-პატრიარქის რეზიდენცია [[ბიჭვინთა|ბიჭვინთიდან]] გელათში გადმოიტანეს.
@@ -31,12 +35,18 @@ XVIII საუკუნიდან გელათის მონასტე
 
 ჯერ კიდევ XII საუკუნეში, [[დავით აღმაშენებელი|დავით აღმაშენებლის]] თაოსნობით, გელათის მონასტერში დიდი შემოქმედებითი საქმიანობა გაჩაღდა. სხვადასხვა დროს აქ მოღვაწეობდნენ [[არსენ იყალთოელი]], [[იოანე პეტრიწი]], [[არსენ ბულმაისიმისძე]], [[პეტრე გელათელი]], [[ევდემონ I|ევდემონ ჩხეტიძე]] ([[1557]]-[[1578]]), [[ექვთიმე საყვარელიძე]] ([[1578]]-[[1616]]), [[გედეონ I|გედეონ ლორთქიფანიძე]] (XVII ს.), [[ანტონ I]], [[გაბაშვილი, ზაქარია|ზაქარია გაბაშვილი]] და სხვა. 
 
+==მემკვიდრეობა==
 გელათის მონასტერში ინახებოდა მდიდრულად მორთული და მინიატიურებით შემკული ქართული ხელნაწერები, რომელთა დიდი ფონდი აქ ძველთაგანვე არსებობდა, აგრეთვე ქართული ჭედური ხელოვნების ბევრი შესანიშნავი ნიმუში  (მაგ. [[ხახულის ხატი|ხახულის ღვთისმშობლის ხატი]]). გელათის მონასტრის ზღუდის გარეთ დაახლოებით 150 მ-ზე, მის ჩრდილოეთ-აღმოსავლეთით, შემორჩენილია სოხასტერის მონასტრის (საყუდებულ ბერთა სამყოფელი) ნანგრევები - ეკლესიების, კოშკის ტიპის საცხოვრებელი სახლებისა და სხვა ნაშთები. მონასტრის სამხრეთ-დასავლეთით მაღალ კონცხზე წმ. საბას სახელობის დარბაზული ეკლესიის (X-XI სს.) ნანგრევებია. მის მახლობლად, გზის გაღმა, წმ. ილიას სახელობის ეკლესიაა. მოშორებით, მდინარე წყალწითელის ხეობაში, ე.წ. "დავითის კონცხზე", მტრის თავდასხმისაგან მონასტრის დამცველი დიდი მრგვალი კოშკის ნანგრევები.
 
 [[1923]] წელს გელათის მონასტერი დახურეს. ამჟამად იგი ქუთაისის სახელმწიფო ისტორიულ-ეთნოგრაფიული მუზეუმის ფილიალია.
 
+==რესურსები ინტერნეტში==
+*[http://www.matiane.com/photoes/gelati/index.html გელათის ფოტო გალერეა]
+*[http://whs.unesco.org/en/list/710 Bagrati Cathedral and Gelati Monastery - იუნესკოს მსოფლიო მემკვიდრეობის ცენტრი]
+
 
 [[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
+[[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
 [[de:Gelati]]
 [[en:Gelati Monastery]]
