--- a/გელათის_მონასტერი.mw
+++ b/გელათის_მონასტერი.mw
@@ -42,7 +42,7 @@ XVIII საუკუნიდან გელათის მონასტე
 
 ==რესურსები ინტერნეტში==
 *[http://www.matiane.com/photoes/gelati/index.html გელათის ფოტო გალერეა]
-*[http://whs.unesco.org/en/list/710 Bagrati Cathedral and Gelati Monastery - იუნესკოს მსოფლიო მემკვიდრეობის ცენტრი]
+*[http://whs.unesco.org/en/list/710 ბაგრატის საკათედრო ტაძარი და გელათის მონასტერი - იუნესკოს მსოფლიო მემკვიდრეობის ცენტრი]
 
 
 [[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
