*Empty MediaWiki Message*

--- a/გელათის_მონასტერი.mw
+++ b/გელათის_მონასტერი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Gelati-1.jpg|thumb|გელათის მონასტერი]]
+[[სურათი:Gelati-1.jpg|thumb|300px|გელათის მონასტერი]]
 '''გელათის მონასტერი''' -- ქართული ხუროთმოძღვრული ანსამბლი, შუა საუკუნეების საქართველოს უმნიშვნელოვანესი ცენტრი. აგებულია [[ქუთაისი|ქ. ქუთაისის]] ჩრდილოეთ-აღმოსავლეთით 11 კმ-ზე, [[წყალწითელა (მდინარე)|მდინარე წყალწითელის]] ხეობაში. დაარსებულია [[1106]] წელს [[დავით აღმაშენებელი|დავით აღმაშენებლის]] თაოსნობით. შემოზღუდულია გალავნით. ანსამბლში შედის სხვადასხვა  დროინდელი (ძირითადად XII-XIII სს.) შენობები. შეტანილია [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის ძეგლების სიაში.
 
 ==არქიტექტურა==
