--- a/Wiki.mw
+++ b/Wiki.mw
@@ -24,6 +24,8 @@
 [[კატეგორია:ვიკიპედია]]
 [[კატეგორია:საზოგადოების გვერდები]]
 
+zefzefzefzefzefzefzefzefefzzefzefzefzefzef
+
 [[af:Wiki]]
 [[an:Wiki]]
 [[ar:ويكي]]
