--- a/ალავერდი.mw
+++ b/ალავერდი.mw
@@ -6,27 +6,27 @@
 [[სურათი:ალავერდი.jpg|left|thumb|ალავერდის საკათედრო ტაძარი]]
 '''ალავერდი''', ქართული ხუროთმოძღვრების ძეგლი, სამონასტრო კომპლექსი, [[ალავერდის ეპარქია|ალავერდის ეპარქიის]] ცენტრი. მდებარეობს [[ალაზნის ველი|ალაზნის ველზე]] [[ალავერდი (ახმეტის რაიონი)|სოფ. ალავერდთან]] ([[ახმეტის რაიონი]]), [[თელავი|თელავიდან]] 20 კმ-ზე. 
 
-
 ალავერდის მონასტერი VI საუკუნის შუა ხანებში დააარსა [[იოსებ ალავერდელი|იოსებ ალავერდელმა]]. XI საუკუნის დასაწყისში [[კვირიკე]] კახთა მეფემ ალავერდის წმ. გიორგის პატარა ეკლესიის ადგილას ააგო საკათედრო ტაძარი, რომელიც უმთავრესად ალავერდის სახელწოდებითაა ცნობილი. 
 
-
+==არქიტექტურა==
 [[სურათი:3d plan.gif|thumb|ალავერდის შენობის გეგმა]]
 ტაძარი ერთ-ერთი უდიდესი საეკლესიო ნაგებობაა საქართველოში (41,7x26,4, სიმაღლე 50 მ-მდე). შენობის გეგმას საფუძვლად უდევს ჯვარი, რომლის სამი, ერთმანეთს ტოლი მკლავი ნახევარწრიული აბსიდებით მთავრდება და ქმნის ე.წ. ტრიკონქს. დასავლEტის მკლავი წაგრძელებულია, აქვს გვერდის ნავები. საკურთხევლის აბსიდის ორსავე მხარეს მოთავსებულია სამკვეტლოს და სადიაკვნეს ოტახები. გარედან შენობას სწორკუთხა მოხაზულობა აქვს. ჯვრის მკლავების გადაკვეთაზე აღმართული გუმბათი ოთხ ბურჯს ეყრდნობა. ჩრდილოეთით, სამხრეთით და დასავლეთით ტაძარს ღია გალერეები ჰქონდა, რომლებიც XIX საუკუნის დასაწყისში დაუნგრევიათ. ამ სამ მხარეს არის მოთავსებული ტაძრის შესასვლელებიც. შიდა სივრცე გამოირჩევა გრანდიოზულობითა და დახვეწილი პროპორციებით. ინტერიერს კარგად ანათებს ფართო კარ-სარკმელებიდან უხვად შემოსული სინათლე (გუმბათს 16 სარკმელი აქვს). მონუმენტური ფასადები ძუნწად არის მორთული (ეს კახეთის ძეგლების საერთო თავისებურებაა). დამახასიათებელია აღმოსავლეთი ფასადის აგებულება - ხუთი დეკორატიული თაღი და ორი ღრმა სამკუთხა ნიში.
 
-
 ტაძარი უმთავრესად გარე და შიგა პირი კი მოპირკეთებულია შირიმის მოზრდილი კვადრებით. ნაგებობა გადახურული ყოფილა ცისფრად მოჭიქული დიდი ზომის კრამიტის ფილებით, რომელთა ფრაგმენტები დღემდეა შემორჩენილი, შემორჩენილია აგრეთვე წარწერები. 
 
+==ისტორია==
 ალავერდის ტაძარი მრავალჯერ დაზიანებულა მომხდურთაგან და მიწისძვრებისაგან. მისი პირველი დიდი რესტავრაციისას ([[ალექსანდრე]] კახთა მეფის დროს, XV საუკუნის 80-იან წლებში) აღადგინეს გუმბათის ყელი მთლიანად და კედლების ცალკეული ნაწილები. 1742 მიწისძვრის დროს დაზიანებული ალავერდის რესტავრაცია დაიწყო [[თამარ|დედოფალმა თამარმა]] (1750) და დაამთავრა [[ერეკლე II|ერეკლე II-მ]]. ტაძრის ყველა აღდგენილი ნაწილი აგურით არის ნაგები. XIX საუკუნის ბოლოს ალავერდის ტაძარი შიგნით მთლიანად შეათეთრეს. კედლების გაწმენდის შემდეგ ([[1966]]) გამოვლინდა მხატვრობის რამდენიმე ფენა: პირველი და უმნიშვნელოვანესია XI საუკუნის მოხატულობის ფრაგმენრები. სამხრეთის მკლავის კედლებზე შემორჩენილია XV-XVI საუკუნეების, ხოლო დასავლეთ და ჩრდილოეთ კედლებზე XVI-XVII საუკუნეების ფრესკები. 
+
+ალავერდის ხუროთმოძღვრულ კომპლექსში, რომელსაც გარშემორტყმული აქვს გალავანი (XVII-XVIII სს.), გაერთიანებულია სხვადასხვა დროის ნაგებობები. პალატი, რომელიც საქართველოს ამ ტიპის ნაგებობათა შორის ერთ-ერთი ყველაზე მნიშვნელოვანია, სამსართულიანი შენობაა. მისი ქვედა სართული - დიდი ზომის კამაროვანი დარბაზი, XVI-VII საუკუნეებში სატრაპეზო ყოფილა. [[1615]] ახლო პერიოდშია აგებული ფეიქარ-ხანის აგურის სასახლე, მისი მთავარი სადგომია რვაწახნაგა, კამარით გადახურული და ფართო თაღებით გახსნილი ნაგებობა, რომელზედაც დაბალი, კვადრატული ოთახია მიშენებული. არის სხვა საცხოვრებელი ნაგებობეიც, აგრეთვე აბანო, მარანი, სამრეკლო და სხვა. თავდაპირველად ალავერდი მამათა მონასტერი იყო. XVII-XVIII საუკუნეებში კი აქ დაარსდა დედათა მონასტერიც, სადაც მონაზვნად აღკვეცილი სამეფო ოჯახის წევრები ცხოვრობდნენ. ალავერდი ლიტერატურული საქმიანობის მძლავრი კერაც იყო. აქ მოღვაწეობდნენ ქართველი მწერლები, კალიგრაფები, მწიგნობარნი, მ.შ. [[ფილიპე ალავერდელი]] (XVI-XVII სს.), [[ზებედე]] მთავარეპისკოპოსი (XVII ს.), [[ნიკიფორე ირბახი|ნიკიფორე ირბახი]] (ნიკოლოზ ჩოლოყაშვილი, XVII ს.), [[მარიამ-მაკრინა|მარიამ-მაკრინე ბაგრატიონი]] (XVIII ს.) და სხვები.
+
+==გალერეა==
 <gallery>
 სურათი:Geo297-93-2400jpg.jpg|
 სურათი:Geo296-93-2400jpg.jpg|
 სურათი:Geo294-93-2400jpg.jpg|
 </gallery>
-ალავერდის ხუროთმოძღვრულ კომპლექსში, რომელსაც გარშემორტყმული აქვს გალავანი (XVII-XVIII სს.), გაერთიანებულია სხვადასხვა დროის ნაგებობები. პალატი, რომელიც საქართველოს ამ ტიპის ნაგებობათა შორის ერთ-ერთი ყველაზე მნიშვნელოვანია, სამსართულიანი შენობაა. მისი ქვედა სართული - დიდი ზომის კამაროვანი დარბაზი, XVI-VII საუკუნეებში სატრაპეზო ყოფილა. [[1615]] ახლო პერიოდშია აგებული ფეიქარ-ხანის აგურის სასახლე, მისი მთავარი სადგომია რვაწახნაგა, კამარით გადახურული და ფართო თაღებით გახსნილი ნაგებობა, რომელზედაც დაბალი, კვადრატული ოთახია მიშენებული. არის სხვა საცხოვრებელი ნაგებობეიც, აგრეთვე აბანო, მარანი, სამრეკლო და სხვა. თავდაპირველად ალავერდი მამათა მონასტერი იყო. XVII-XVIII საუკუნეებში კი აქ დაარსდა დედათა მონასტერიც, სადაც მონაზვნად აღკვეცილი სამეფო ოჯახის წევრები ცხოვრობდნენ. ალავერდი ლიტერატურული საქმიანობის მძლავრი კერაც იყო. აქ მოღვაწეობდნენ ქართველი მწერლები, კალიგრაფები, მწიგნობარნი, მ.შ. [[ფილიპე ალავერდელი]] (XVI-XVII სს.), [[ზებედე]] მთავარეპისკოპოსი (XVII ს.), [[ნიკიფორე ირბახი|ნიკიფორე ირბახი]] (ნიკოლოზ ჩოლოყაშვილი, XVII ს.), [[მარიამ-მაკრინა|მარიამ-მაკრინე ბაგრატიონი]] (XVIII ს.) და სხვები.
-
-
-
-
 
 
 [[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
+
+[[en:Alaverdi (monastery)]]
