*Empty MediaWiki Message*

--- a/არღუნი_(მრავალმნიშვნელოვანი).mw
+++ b/არღუნი_(მრავალმნიშვნელოვანი).mw
@@ -1,7 +1,7 @@
 საკუთარი სახელი '''არღუნი''' შეიძლება აღნიშნავდეს:
 
 *[[არღუნი (მდინარე)| არღუნი]] - მდინარე ჩრდილოეთ კავკასიაში
-* [[არღუნი (ჩაჩნეთი)| არღუნი]] - ქალაქი ჩაჩნეთში
+* [[არღუნი (ჩაჩნეთი)| არღუნი]] - ქალაქი ჩეჩნეთში
 * [[არღუნი (დუშეთის რაიონი)| არღუნი]] - სოფელი დუშეთის რაიონში
 
 
