*Empty MediaWiki Message*

--- a/ალავერდი.mw
+++ b/ალავერდი.mw
@@ -1,7 +1,8 @@
-[[სურათი:ალავერდი.jpg|left|thumb|ალავერდის საკათედრო ტაძარი]]
+[[სურათი:ალავერდი.jpg|270px|thumb|ალავერდის საკათედრო ტაძარი]]
+[[სურათი:3d plan.gif|thumb|270px|ალავერდის შენობის გეგმა]]
 {|border=0 cellpadding=10 width=100%
 |- bgcolor=whitesmoke
-|<small>საკუთარ სახელს "'''ალავერდი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ ალავერდი]]
+|<small>საკუთარ სახელს "'''ალავერდი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ალავერდი]]
 |}</small>
 
 '''ალავერდი''', ქართული ხუროთმოძღვრების ძეგლი, სამონასტრო კომპლექსი, [[ალავერდის ეპარქია|ალავერდის ეპარქიის]] ცენტრი. მდებარეობს [[ალაზნის ველი|ალაზნის ველზე]] [[ალავერდი (ახმეტის რაიონი)|სოფ. ალავერდთან]] ([[ახმეტის რაიონი]]), [[თელავი|თელავიდან]] 20 კმ-ზე. 
@@ -9,7 +10,6 @@
 ალავერდის მონასტერი VI საუკუნის შუა ხანებში დააარსა [[იოსებ ალავერდელი|იოსებ ალავერდელმა]]. XI საუკუნის დასაწყისში [[კვირიკე]] კახთა მეფემ ალავერდის წმ. გიორგის პატარა ეკლესიის ადგილას ააგო საკათედრო ტაძარი, რომელიც უმთავრესად ალავერდის სახელწოდებითაა ცნობილი. 
 
 ==არქიტექტურა==
-[[სურათი:3d plan.gif|thumb|ალავერდის შენობის გეგმა]]
 ტაძარი ერთ-ერთი უდიდესი საეკლესიო ნაგებობაა საქართველოში (41,7x26,4, სიმაღლე 50 მ-მდე). შენობის გეგმას საფუძვლად უდევს ჯვარი, რომლის სამი, ერთმანეთს ტოლი მკლავი ნახევარწრიული აბსიდებით მთავრდება და ქმნის ე.წ. ტრიკონქს. დასავლEტის მკლავი წაგრძელებულია, აქვს გვერდის ნავები. საკურთხევლის აბსიდის ორსავე მხარეს მოთავსებულია სამკვეტლოს და სადიაკვნეს ოტახები. გარედან შენობას სწორკუთხა მოხაზულობა აქვს. ჯვრის მკლავების გადაკვეთაზე აღმართული გუმბათი ოთხ ბურჯს ეყრდნობა. ჩრდილოეთით, სამხრეთით და დასავლეთით ტაძარს ღია გალერეები ჰქონდა, რომლებიც XIX საუკუნის დასაწყისში დაუნგრევიათ. ამ სამ მხარეს არის მოთავსებული ტაძრის შესასვლელებიც. შიდა სივრცე გამოირჩევა გრანდიოზულობითა და დახვეწილი პროპორციებით. ინტერიერს კარგად ანათებს ფართო კარ-სარკმელებიდან უხვად შემოსული სინათლე (გუმბათს 16 სარკმელი აქვს). მონუმენტური ფასადები ძუნწად არის მორთული (ეს კახეთის ძეგლების საერთო თავისებურებაა). დამახასიათებელია აღმოსავლეთი ფასადის აგებულება - ხუთი დეკორატიული თაღი და ორი ღრმა სამკუთხა ნიში.
 
 ტაძარი უმთავრესად გარე და შიგა პირი კი მოპირკეთებულია შირიმის მოზრდილი კვადრებით. ნაგებობა გადახურული ყოფილა ცისფრად მოჭიქული დიდი ზომის კრამიტის ფილებით, რომელთა ფრაგმენტები დღემდეა შემორჩენილი, შემორჩენილია აგრეთვე წარწერები. 
