--- a/შარტრის_საკათედრო_ტაძარი.mw
+++ b/შარტრის_საკათედრო_ტაძარი.mw
@@ -22,7 +22,7 @@
 
 შუა საუკუნეებში კათედრალი ასევე ფუნქციონირებდა, როგორც მნიშვნელოვანი საგანმანათლებლო კერა. [[შარლემანი|შარლემანის]] სურვილით განათლება ფრანგი ხალხისთვის ხელმისაწვდომი უნდა გამხდარიყო და ვინაიდან ახალი სკოლების აშენება გაცილებით ძვირი იქნებოდა, არსებული ინფრასტრუქტურის გამოყენება უფრო ადვილი იყო. მისი ბრძანებით კათედრალებსა და მონასტრებში სკოლების არსებობა და რელიგიური სწავლება აუცილებელი კრიტერიუმი გახდა მთელ საფრანგეთში. კათედრალურმა სკოლებმა მალე სამონასტრო სკოლებს წაართველ განათლების წამყვანი როლი და უკვე მე-11 საუკუნეში კათედრალი თავად გახდა სკოლის სიმბოლო/სინონიმი. ყველა კათედრალს საკუთარი სპეციალიზაცია ჰქონდა და შარტრის დახელოვნებად [[ლოგიკა|ლოგიკის]] სწავლება ითვლებოდა. შარტრის ახალი ლოგიკა მრავალთა მიერ პარიზზე უფრო პროგრესულადაც კი ითვლებოდა.
 
-==ინტერნეტ რესურსები==
+==რესურსები ინტერნეტში==
 *[http://kunsthistorie.com/galleri/index.php?album=Frankrike%2FChartres&sortby=name&order=asc შარტრის არქიტექტურული დეტალები - ფოტოები]
 *[http://perso.wanadoo.fr/.diocese.chartres/cathedrale/ ვებგვერდი მიძღვნილი შარტრის კათედრალისადმი (ფრ.)]
 *[http://www.jerusalem-pedibus.net/site_fr/labyr_fr.html ლაბირინთი: გზა იერუსალიმისკენ (ფრ.)]
